HEAD
	+ Bugfix: Migration for VPN clients to new local port and address
	  options works
	+ Bugfix: VPN local address tests are now quiet
2.0.10
	+ Added new models to show information about our several services:
	  - Server subscriptions
	  - Advanced Security Updates
	  - Disaster Recovery
	  - Technical Support
	+ New Zentyal Cloud client widget with new services information
	+ Remote services VPN client now uses local port and address options
	+ Bugfix: fixed error in remote backup template when a basic
	  subscription already has a backup in the cloud
2.0.9
	+ Added WS and VPN server connectivity check upon subscription
	+ Bugfix: package removal does not crash if can't unsubscribe
	+ Bugfix: Remove key field in consolidation which is useless in
	  this context and it leads to errors everyday of the month except
	  the first one
	+ Indicate script to run when changing configuration file
2.0.8
	+ Remote backup is now overwritten with Basic Subscription
	+ Using a new key from bundle or dnsServer as fallback to set the
	  set of addresses to access from Zentyal Cloud
	+ Added check to not use any address when connected to Zentyal
	  Cloud to do remote support
2.0.7
	+ Added backup/restore of subscription credentials
	+ Added API to get the list of registered Zentyal servers
	+ Added API to get the backup credentials if available
	+ Added API to know if the disaster recovery add-on is on
	+ Fixed problems with cache values
2.0.6
	+ Typo fix to run cron job when the period says to do
	+ Set default order for dashboard widgets
2.0.5
	+ Set hostname as default value for server name
	+ Minor message changes
	+ Correct case for sql column names
2.0.4
	+ Fixed bad hour bug in remoteservices cron file generation
2.0.3
	+ Allow insecure clients (bad renegotiation CVE-2009-3555) until
	  Zentyal Cloud clients have the problem fixed.
	+ Do not save Apache module in module restarts as GUI already do
	  it at the end of saving modules stage
	+ Set random times for cron tasks